@@ -6,6 +6,10 @@ v7.4.1:
  - Calendar View:
    - Issue #141: today is highlighted in a blue circle (red  for sundays)
    - removed layout workarounds (JavaFX bugs have been fixed)
+ - STApplication: removed Swing Look&Feel workaround (no Swing map anymore)
+ - Refactoring: removed resource lookup in entity classes
+ - updated Java runtime to Java SE/FX 8u131, contains a bugfix for a memory
+   leak in the WebView used by LeafletMap
  ExerciseViewer changes:
  - removed compiler warnings in LeafletMap component
 
